// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonPrimitive: getCommonProps function should match: dynamic width and static fontWeight and transition 1`] = `
Object {
  "contentAlign": "center",
  "contentWidth": "100%",
  "fontSize": "14px",
  "fontWeight": "500",
  "height": "44px",
  "padding": "0",
  "width": "200px",
}
`;

exports[`ButtonPrimitive: getCommonProps function should match: null width and static fontWeight and transition 1`] = `
Object {
  "contentAlign": "center",
  "contentWidth": "100%",
  "fontSize": "16px",
  "fontWeight": "500",
  "height": "52px",
  "padding": "0",
  "width": undefined,
}
`;

exports[`ButtonPrimitive: getCommonProps function should match: undefined contentWidth and center align 1`] = `
Object {
  "contentAlign": "center",
  "contentWidth": undefined,
  "fontSize": "14px",
  "fontWeight": "500",
  "height": "44px",
  "padding": "0 16px",
  "width": undefined,
}
`;
